--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "json-sass",
-  "version": "1.3.5",
-  "description": "Transform JSON into scss syntax Sass.",
-  "main": "lib/jsonSass.js",
-  "bin": "lib/bin/json-sass",
+  "name": "json2scss-map",
+  "version": "1.0.0",
+  "description": "Covert JSON into scss map. Utility Tool for those who want there theme colors and font can be modified from json , but also use all the scss feature using scss varibles.",
+  "main": "lib/json2scss.js",
+  "bin": "lib/bin/json2scss",
   "scripts": {
     "test": "make test",
-    "prepublish": "npm test"
+    "prepare": "npm test"
   },
   "keywords": [
     "sass",
-    "JSON"
+    "JSON",
+    "scss",
+    "next",
+    "dart-scss"
   ],
-  "author": "Andrew Clark <acdlite@me.com>",
+  "author": "AS Developers <feedback@asdevs.dev>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AS-Devs/json2scss-map.git"
+  },
   "license": "ISC",
   "dependencies": {
-    "babel": "~4.1.0",
-    "lodash": "~2.4.1",
-    "lodash-node": "~2.4.1",
-    "minimist": "~1.1.0",
-    "object-assign": "~2.0.0",
-    "through2": "~0.6.3"
+    "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
-    "chai": "~1.9.2",
-    "mocha": "~2.0.1"
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
   }
 }
